Container/Kubernetes/k3s-soniiit/kube-prometheus-stack/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.home.soniiit.net`)
      kind: Rule
      services:
        - name: grafana
          port: 80
          sticky:
            cookie:
              httpOnly: true
              name: grafana
              secure: true
              sameSite: none
  tls:
    secretName: home-soniiit-net-selfsigned-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.home.soniiit.net`)
      kind: Rule
      services:
        - name: prometheus-prometheus
          port: 443
  tls:
    secretName: home-soniiit-net-selfsigned-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager-ingress
  namespace: monitoring
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`alertmanager.home.soniiit.net`)
      kind: Rule
      services:
        - name: prometheus-alertmanager
          port: 8080
  tls:
    secretName: home-soniiit-net-selfsigned-tls
